--- a/ECommerceWithAuth.API/ECommerceWithAuth.API.csproj
+++ b/ECommerceWithAuth.API/ECommerceWithAuth.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
