Added auth to the api including all required settings.

--- a/ECommerceWithAuth.API/appsettings.json
+++ b/ECommerceWithAuth.API/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Default": "Server=(LocalDB)\\MSSQLLocalDB; Database=ECommerce; Trusted_Connection=True"
   },
+  "JwtSettings": {
+    "SigningKey": "My Security signing key"
+  },
+  "ApiKey": "6yXNPMcdvyV3fM+ltmEIqLdkQzHl4c7M",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
