Finally the bearer token can now be stored and called from the cookies to access the restricted api methods. Authorization now works on both sides, MVC & API.

--- a/ECommerceWithAuth.MVC/appsettings.json
+++ b/ECommerceWithAuth.MVC/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiLocation": "https://localhost:7111/"
+  "ApiLocation": "https://localhost:7111/api",
+  
 
 }
