--- a/ECommerceWithAuth.MVC/appsettings.json
+++ b/ECommerceWithAuth.MVC/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiLocation": "https://localhost:7111/api",
+  "ApiLocation": "https://localhost:7111/api"
   
 
 }
