--- a/ECommerceWithAuth.MVC/ECommerceWithAuth.MVC.csproj
+++ b/ECommerceWithAuth.MVC/ECommerceWithAuth.MVC.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Views\Order\Index.cshtml" />
     <None Include="Views\Product\Index.cshtml" />
   </ItemGroup>
 
