Fixed a bug with Date in Requesting ExchangeRates. The date format in azure is different which caused the entire feature to fail. Added publish-profiles. The app is now testet in locally and in Azure.

--- a/ECommerceWithAuth.MVC/appsettings.json
+++ b/ECommerceWithAuth.MVC/appsettings.json
@@ -9,6 +9,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiLocation": "https://localhost:7111/api"
+  "ApiLocation": "https://ecommercewithauth-api.azurewebsites.net/"
   
 }
