--- a/ECommerceWithAuth.MVC/appsettings.json
+++ b/ECommerceWithAuth.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDB)\\MSSQLLocalDB; Database=ECommerce; Trusted_Connection=True"
+    "Default": "Data Source=ecommercewithauth-server.database.windows.net;Initial Catalog=ECommerce;User ID=naelsharabi;Password=String123!mfmf;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -9,6 +9,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiLocation": "https://ecommercewithauth-api.azurewebsites.net/"
-  
+  "ApiLocation": "https://ecommercewithauth-api.azurewebsites.net/api"
+
 }
