--- a/ECommerceWithAuth.MVC/ECommerceWithAuth.MVC.csproj
+++ b/ECommerceWithAuth.MVC/ECommerceWithAuth.MVC.csproj
@@ -30,4 +30,6 @@
     <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
