Re-configured the appsettings for localhost. Subscribed 'SateHasChanged' to the action event in CartComponent.

--- a/ECommerceWithAuth.MVC/appsettings.json
+++ b/ECommerceWithAuth.MVC/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=ecommercewithauth-server.database.windows.net;Initial Catalog=ECommerce;User ID=naelsharabi;Password=String123!mfmf;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Default": "Server=(LocalDB)\\MSSQLLocalDB; Database=ECommerce; Trusted_Connection=True; MultipleActiveResultSets=True"
+    //"Default": "Data Source=ecommercewithauth-server.database.windows.net;Initial Catalog=ECommerce;User ID=naelsharabi;Password=String123!mfmf;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -9,6 +10,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiLocation": "https://ecommercewithauth-api.azurewebsites.net/api"
+  "ApiLocation": "https://localhost:7111/api"
+  //"ApiLocation": "https://ecommercewithauth-api.azurewebsites.net/api"
 
 }
